--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,6 +14,6 @@
     </fragment>
     <fragment
         android:id="@+id/productDetailsFragment"
-        android:name="com.rimapps.shoppingapp.ProductDetailsFragment"
+        android:name="com.rimapps.shoppingapp.features.productDetails.ProductDetailsFragment"
         android:label="ProductDetailsFragment" />
 </navigation>
